# doge-data-challenge

./: .env  .env.example  .gitignore  README.md  bootstrap.py  pyproject.toml  usa_regulation_data_analysis.ipynb
doge_data_challenge/helpers/: __init__.py  env_paths.py  init_notebook.py  print_helpers.py  wordcount.py
helpers/: __init__.py  env_paths.py
notebooks/: 01_agency_mapping_and_flatening.ipynb  01_agency_mapping_and_flattening.ipynb  01_agency_scraper.ipynb  02_data_download_and_storage.ipynb  usa_regulation_data_analysis.ipynb
notebooks/helpers/: env_paths.py  print_helpers.py
notebooks/utils/: print_helpers.py  trim_notebook_outputs.py
