[tool.poetry]
name = "doge-data-challenge"
version = "0.1.0"
description = "Data pipeline for DOGE regulation analysis"
authors = ["Brian Kaewell <briankaewell@gmail.com>"]
readme = "README.md"
packages = [{include = "doge_data_challenge"}]
# package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
python-dotenv = ">=1.1.0,<2.0.0"
jupyter = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
